[package]
name = "protohackers_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25" }
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
